# timelon

./: .gitignore  ASSETS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  popover.html  tsconfig.json  vite.config.ts
docs/: PLAN.md
scripts/: gen-icon.mjs  gen-sounds.mjs  gen-tray-icon.mjs  gen-tray-icons.mjs
src/: main-popover.tsx  main-window.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  timer.rs  tray.rs
src/components/: AllTimePie.tsx  AnimatedNumber.tsx  ChartTooltip.tsx  Controls.tsx  FocusBarChart.tsx  SessionsChart.tsx  StatCards.tsx  TimerRing.tsx  TrayPreview.tsx
src/components/ui/: button.tsx  card.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx
src/lib/: colors.ts  ipc.ts  settings.tsx  sounds.ts  stats.ts  theme.ts  trayIcon.ts  useCountUp.ts
src/views/: PopoverView.tsx  SettingsView.tsx  StatsView.tsx  TimerView.tsx
